Correction de bug

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,7 @@ services:
   wordpress:
     image: wordpress:latest
     restart: always
-    ports:
-      
-"8000:80"
+    ports: "8000:80"
   environment:
     WORDPRESS_DB_HOST: db
     WORDPRESS_DB_USER: your_mysql_username
