--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,5 +16,4 @@ services:
     environment:
       PMA_HOST: db
       MYSQL_ROOT_PASSWORD: your_mysql_root_password
-    ports:
-      - "8080:80"
+    ports: "8080:80"
